; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/extr_asm.c_parseHeap.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/extr_asm.c_parseHeap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @parseHeap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parseHeap(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i8* @r_strbuf_get(i32* %8)
  store i8* %9, i8** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @r_strbuf_length(i32* %10)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = mul i64 %12, 2
  %14 = add i64 64, %13
  %15 = trunc i64 %14 to i32
  %16 = call i8* @malloc(i32 %15)
  store i8* %16, i8** %7, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %33

19:                                               ; preds = %2
  %20 = load i8*, i8** %7, align 8
  store i8 0, i8* %20, align 1
  %21 = load i8*, i8** %7, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @strcpy(i8* %21, i8* %22)
  %24 = load i32*, i32** %3, align 8
  %25 = load i8*, i8** %5, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = call i32 @r_parse_parse(i32* %24, i8* %25, i8* %26)
  %28 = load i32*, i32** %4, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = call i32 @r_strbuf_set(i32* %28, i8* %29)
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @free(i8* %31)
  br label %33

33:                                               ; preds = %19, %2
  ret void
}

declare dso_local i8* @r_strbuf_get(i32*) #1

declare dso_local i64 @r_strbuf_length(i32*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @r_parse_parse(i32*, i8*, i8*) #1

declare dso_local i32 @r_strbuf_set(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
